syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/TauzhnianskyiArtem/chat-service/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(ChatCreateRequest) returns (ChatCreateResponse);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc Delete(ChatDeleteRequest) returns (google.protobuf.Empty);
}

message ChatCreateRequest {
  repeated string usernames = 1;
}

message ChatCreateResponse {
  int64 id = 1;
}

message SendMessageRequest {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message ChatDeleteRequest {
  int64 id = 1;
}


